# lib/api.js
@@ -4,6 +4,7 @@ const express = require('express');
 const logger = require('./logger').getLogger('[API]');
 const XSDocDB = require('../lib/xsdocdb');
 const XSService = require('../lib/xsservice');
+const SymbolSvc = require('../lib/symbolsvc')
 
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
@@ -12,12 +13,14 @@ class API {
     constructor(servicelocator) {
         this.xsdocdb = servicelocator['xsdocdb'];
         this.xsservice = servicelocator['xsservice'];
+        this.symbolsvc = servicelocator['symbolsvc'];
     }
 
     getRouter() {
         var router = express.Router();
         router.get('/fields', (req, res)=> this.getFields(req, res));
         router.get('/symboldata', (req, res)=> this.getSymbolData(req, res));
+        router.get('/symbollist', (req, res)=> this.getSymbolList(req, res));
         router.use('/docs', swaggerUi.serve);
         router.get('/docs', swaggerUi.setup(swaggerDocument));
         return router;
@@ -72,6 +75,28 @@ class API {
         catch(exception) {
             this.handleErr(req, res, exception);
         }
+    }
+
+    /**
+     * http://<server>/api/symbollist?exch=1
+     * 
+     * @param {*} req 
+     * @param {*} res 
+     */
+     async getSymbolList(req, res) {
+        try {
+            let exch = req.query.exch;
+            if (!exch)
+                throw `Missing argument: exch`;
+
+            exch = parseInt(exch);
+            let records = await this.symbolsvc.getSymbolList(exch);
+            res.json(records);    
+        }
+        catch(exception) {
+            this.handleErr(req, res, exception);
+        }
+
     }
 }
 
